--- a/FE/FE/wwwroot/css/login.css
+++ b/FE/FE/wwwroot/css/login.css
@@ -1,4 +1,4 @@
-﻿.register-block {
+﻿.login-block {
     background: #6495ed; /* fallback for old browsers */
     background: -webkit-linear-gradient( to bottom, #87ceeb, #6495ed ); /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient( to bottom, #87ceeb, #6495ed ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -8,28 +8,22 @@
 }
 
 .banner-sec {
-    background: none;
+    background: url(https://i.ibb.co/qRPSB9x/movie.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    image-resolution: from-image;
     min-height: 400px;
     border-radius: 0 10px 10px 0;
     padding: 0;
 }
 
-img {
-    max-width: 100%;
-    max-height: 100%;
-
-}
-
-
 .container {
-    position: relative;
-    color: white;
     background: #fff;
     border-radius: 10px;
     box-shadow: 15px 20px 0px rgba(0, 0, 0, 0.1);
+}
+
+.carousel-inner {
+    border-radius: 0 10px 10px 0;
 }
 
 .carousel-caption {
@@ -37,12 +31,12 @@ img {
     left: 5%;
 }
 
-.register-sec {
+.login-sec {
     padding: 50px 30px;
     position: relative;
 }
 
-    .register-sec .copy-text {
+    .login-sec .copy-text {
         position: absolute;
         width: 80%;
         bottom: 20px;
@@ -50,22 +44,22 @@ img {
         text-align: center;
     }
 
-        .register-sec .copy-text i {
+        .login-sec .copy-text i {
             color: #feb58a;
         }
 
-        .register-sec .copy-text a {
+        .login-sec .copy-text a {
             color: #e36262;
         }
 
-    .register-sec h2 {
+    .login-sec h2 {
         margin-bottom: 30px;
         font-weight: 800;
         font-size: 30px;
         color: #6495ed;
     }
 
-        .register-sec h2:after {
+        .login-sec h2:after {
             content: " ";
             width: 100px;
             height: 5px;
@@ -86,12 +80,12 @@ img {
 .banner-text {
     width: 70%;
     position: absolute;
-    bottom: 10px;
+    bottom: 40px;
     padding-left: 20px;
 }
 
     .banner-text h2 {
-        color: darkblue;
+        color: #fff;
         font-weight: 600;
     }
 
@@ -106,5 +100,5 @@ img {
         }
 
     .banner-text p {
-        color: darkblue;
+        color: #fff;
     }
