--- a/FE/FE/wwwroot/css/index.css
+++ b/FE/FE/wwwroot/css/index.css
@@ -1,12 +1,115 @@
-﻿.carousel-inner {
-    width:700px;
-        height:300px
+﻿@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
+*, *::before, *::after {
+    box-sizing: border-box; 
 }
 
-.card {
-    display: inline;
+body {
+    margin: 0;
+    background:white;
+    background-size: cover;
+    height:1000px;
 }
 
-.container{
-    display:flex;
+.title {
+    font-family: "Montserrat";
+    text-align: center;
+    color: #FFF;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 9vh;
+    letter-spacing: 1px;
+    font-size:34px;
+}
+
+h1 {
+    background-image: url(https://media.giphy.com/media/LPBhHit55Xxx03lllW/giphy.gif);
+    background-size: cover;
+    color: transparent;
+    -moz-background-clip: text;
+    -webkit-background-clip: text;
+    text-transform: uppercase;
+    font-size: 50px;
+    line-height: .75;
+    margin: 10px 0;
+}
+
+.carousel_wrapper {
+    position: relative;
+    width: 320px;
+    margin: 50px auto 0 auto;
+    perspective: 1000px;
+}
+
+.carousel {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    transform: rotateY(-360deg) translateZ(-412px); /* add reverse transformation from the slides */
+    animation: swirl 40s steps(10000, end) infinite; /* run `swirl` animation (defined at end of CSS) infitely, with animation lasting 40 seconds, and 10,000 steps between the FROM and TO values in the animation for a smooth rotation */
+}
+
+.slide {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    width: 300px;
+    height: 187px;
+}
+
+    .slide img {
+        width: 280px;
+        height: 175px;
+        border: 3px inset rgba(47, 115, 201, 0.75);
+        box-shadow: 0 0 15px 3px rgba(110, 72, 221, 0.9);
+    }
+
+
+    .slide.one {
+        transform: rotateY(0deg) translateZ(412px);
+    }
+
+    .slide.two {
+        transform: rotateY(40deg) translateZ(412px);
+    }
+
+    .slide.three {
+        transform: rotateY(80deg) translateZ(412px);
+    }
+
+    .slide.four {
+        transform: rotateY(120deg) translateZ(412px);
+    }
+
+    .slide.five {
+        transform: rotateY(160deg) translateZ(412px);
+    }
+
+    .slide.six {
+        transform: rotateY(200deg) translateZ(412px);
+    }
+
+    .slide.seven {
+        transform: rotateY(240deg) translateZ(412px);
+    }
+
+    .slide.eight {
+        transform: rotateY(280deg) translateZ(412px);
+    }
+
+    .slide.nine {
+        transform: rotateY(320deg) translateZ(412px);
+    }
+
+@keyframes swirl {
+    from {
+        transform: rotateY(-360deg);
+    }
+
+    to {
+        transform: rotateY(0deg);
+    }
 }
